@@ -18,17 +18,8 @@ TODO for SILC Server 1.0
  o The log files should be opened with silc_file* routines to make
    sure they are 0600.
 
- o BUG: assert() happened in silc_server_free_client_data_timeout, 
-   server.c:3322.
-
- o BUG: The server number stats is wrong on router when backup is 
-   connected.
-
  o BUG: silc_idlist_del_client had been called but sock->user_data remained
    and pointed to invalid pointer.  Where it was called is not known.
-
- o BUG: server->backup has the backup router added twice (old connection 
-   presumably remains, and is invalid).
 
  o Check for valid ban strings.  Check ban string notifying.
 
