@@ -1,3 +1,11 @@
+Fri Apr  1 18:52:47 EEST 2005  Pekka Riikonen <priikone@silcnet.org>
+
+	* Changed announcing to not announce unregistered clients.
+	  Affected file silcd/server.c.
+
+	* Fixed username handling in command reply.  Affected file
+	  silcd/command_reply.c.
+
 Thu Mar 31 22:34:22 CEST 2005  Patrik Weiskircher <pat@icore.at>
 
 	* Added new define SILC_MACOSX, if __APPLE__ and __MACH__ is defined.
